@@ -1,3 +1,6 @@
+Sun Jul 13 2014 Aleksey
+	* Ctrl-C now interrupts benchmarking
+
 Wed Jul  2 2014 Aleksey
 	* === Version 1.3.2 ===
 
